<resources>

    <!-- Main Screen -->
    <string name="main_screen_title">Playlist Maker</string>
    <string name="main_search_button">Поиск</string>
    <string name="main_library_button">Медиатека</string>
    <string name="main_settings_button">Настройки</string>

    <!-- Settings Screen -->
    <string name="settings_screen_title">Настройки</string>
    <string name="settings_dark_theme_switch">Темная тема</string>

    <string name="settings_share_button">Поделиться приложением</string>
    <string name="settings_share_title">Лучший курс по Android разработке!</string>
    <string name="settings_share_url">https://practicum.yandex.ru/android-developer/</string>
    <string name="settings_share_intent_title">Share link</string>

    <string name="settings_support_button">Написать в поддержку</string>
    <string name="settings_support_uri">mailto:</string>
    <string name="settings_support_email">a.a.martynov@yandex.ru</string>
    <string name="settings_support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="settings_support_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="settings_support_intent_title">Send message to support</string>

    <string name="settings_offer_button">Пользовательское соглашение</string>
    <string name="settings_offer_uri">https://yandex.ru/legal/practicum_offer/</string>
    <string name="settings_offer_intent_title">Open offer</string>

    <!-- Search Screen -->
    <string name="search_screen_title">Поиск</string>
    <string name="search_form_hint">Поиск</string>
    <string name="search_result_placeholder_nothing_found">Ничего не нашлось</string>
    <string name="search_result_placeholder_error">Проблемы со связью\n\n
        Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_result_placeholder_error_reload_button">Обновить</string>
    <string name="search_result_placeholder_history">Вы искали</string>
    <string name="search_result_placeholder_history_clear_button">Очистить историю</string>

    <!-- Audio Player Screen -->
    <string name="audio_player_track_time_start_position">00:00</string>
    <string name="audio_player_track_name">Наименование трека</string>
    <string name="audio_player_artist_name">Наименование исполнителя</string>
    <string name="audio_player_track_time">Длительность</string>
    <string name="audio_player_collection_name">Альбом</string>
    <string name="audio_player_release_year">Год</string>
    <string name="audio_player_genre">Жанр</string>
    <string name="audio_player_country">Страна</string>
    <string name="audio_player_no_data">Нет информации</string>
    <string name="audio_player_play_action">Воспроизвести</string>
    <string name="audio_player_add_action">Добавить</string>
    <string name="audio_player_like_action">Нравится</string>

    <!-- Library Screen -->
    <string name="library_screen_title">Медиатека</string>

</resources>