<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/common_background_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="8dp"
        android:padding="4dp">

        <ImageView
            style="@style/Common_PanelHeader_BackButton"
            tools:ignore="ContentDescription" />

        <TextView
            style="@style/Common_PanelHeader_Text"
            android:text="@string/search_screen_title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/search_form_background"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:paddingStart="12dp"
            android:paddingTop="10dp"
            android:paddingEnd="8dp"
            android:paddingBottom="10dp"
            android:src="@drawable/search_form_search_icon" />

        <EditText
            android:id="@+id/inputEditText"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/search_form_hint"
            android:textColorHint="?attr/search_form_hint_color"
            android:inputType="text"
            android:maxLines="1"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="16sp"
            android:textColor="@color/yp_black"
            android:textCursorDrawable="@drawable/search_form_cursor"
            android:autofillHints="no"
            android:imeOptions="actionDone"
            android:singleLine="true"/>

        <ImageView
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:paddingStart="8dp"
            android:paddingTop="10dp"
            android:paddingEnd="12dp"
            android:paddingBottom="10dp"
            android:src="@drawable/search_form_clear_icon"
            android:visibility="gone" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_result_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        tools:listitem="@layout/search_result_item"
        android:visibility="visible"/>

    <LinearLayout
        android:id="@+id/search_result_placeholder_nothing_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/search_result_placeholder_icon_margin_top"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/search_result_placeholder_nothing_found_icon" />
        <TextView
            style="@style/SearchScreen_PlaceholderTextStyle"
            android:text="@string/search_result_placeholder_nothing_found" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_result_placeholder_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/search_result_placeholder_icon_margin_top"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/search_result_placeholder_error_icon" />
        <TextView
            style="@style/SearchScreen_PlaceholderTextStyle"
            android:text="@string/search_result_placeholder_error" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/repeat_request_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/search_result_placeholder_button_margin_top"
            android:backgroundTint="?attr/search_result_error_color"
            android:text="@string/search_result_placeholder_error_button"
            android:textColor="?attr/search_result_error_button_text_color"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/search_result_placeholder_button_corner_radius"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:indeterminateTint="?attr/search_result_error_color"
        android:visibility="gone"/>

</LinearLayout>